--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "firebase": "^9.17.1",
     "framer-motion": "^9.0.1",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
